# biggles

./: .gitignore  CMakeLists.txt  COPYRIGHT  README.md
biggles/: CMakeLists.txt  biggles.in.pc  io.cpp  kalman_filter.cpp  kalman_filter_cache.cpp  model.cpp  partition.cpp  partition_sampler.cpp  samplers.cpp  simulate.cpp  track.cpp  track_collection.cpp  tracker.cpp
biggles/detail/: change_possibility.cpp  cross_over_possibility.cpp  flip_possibility.cpp  fun.cpp  possible_move_recorder.cpp  random.cpp  track_pair_data.cpp  transfer_possibility.cpp
biggles/mh_moves/: mh_moves.cpp  move_birth.cpp  move_cross_over.cpp  move_death.cpp  move_extend.cpp  move_flip.cpp  move_merge.cpp  move_reduce.cpp  move_split.cpp  move_transfer.cpp  move_update.cpp  utility.cpp
biggles/sampling/: gibbs.cpp  metropolis_hastings.cpp  simple.cpp
biggles/server/: engine.cpp  stepper.cpp
biggles/tools/: max_creation.cpp  partition_graph_edit_distance.cpp  sundries.cpp
cmake/Modules/: CheckLSBTypes.cmake  PythonModule.cmake
debian/: README  changelog  control  copyright  libbiggles-doc.docs  rules
doc/: CMakeLists.txt  doxy.config.in  mainpage.doxygen
include/biggles/: biggles.hpp  clutter.hpp  io.hpp  kalman_filter.hpp  kalman_filter.tcc  kalman_filter_cache.hpp  model.hpp  object.hpp  observation.hpp  observation.tcc  observation_collection.hpp  observation_collection.tcc  partition.hpp  partition_sampler.hpp  partition_sampler_items.hpp  point_2d.hpp  samplers.hpp  simulate.hpp  track.hpp  track.tcc  track_collection.hpp  track_collection.tcc  tracker.hpp  tracker_detail.hpp  types.hpp
include/biggles/detail/: constants.hpp  cross_over_possibility.hpp  flip_possibility.hpp  fun.hpp  observation_reservoir.hpp  pair_collection.hpp  pair_iterator_wrapper.hpp  physics.hpp  possible_move_recorder.hpp  random.hpp  track_pair_data.hpp  transfer_possibility.hpp
include/biggles/mh_moves/: mh_move_weights.hpp  mh_moves.hpp  utility.hpp  utility.tcc
include/biggles/python_api/: py_biggles.hpp
include/biggles/sampling/: gibbs.hpp  metropolis_hastings.hpp  simple.hpp  simple.tcc
include/biggles/server/: engine.hpp  stepper.hpp
include/biggles/tools/: clutter_transform.hpp  debug.hpp  max_creation.hpp  partition_graph_edit_distance.hpp  sundries.hpp  track_coll_transform.hpp
python/: CMakeLists.txt  _biggles.cpp  biggles-internal.in.py  biggles-tools.in.py  biggles-track.in.py  msmm-features-to-biggles.in.py  tickles-internal.in.py
python/biggles/: __init__.py  _chunking.py  _filedescriptor.py  _kdtree.py  _move_stats.py  _sample_recorder.py  _track_utils.py  _util_output.py  _utilities.py  compare.py  convergence.py  convert.py  demote.py  features_to_partition.py  hdf5util.py  idx2obs.py  indexing.py  info.py  match_partitions.py  merge_simulations.py  obs2idx.py  random_partition.py  ripley_k.py  simulate.py  tools.py  track.py  tracking.py  vector_partition.py
python/test/: CMakeLists.txt  test_convert.py  test_engine.py  test_import.py  test_kalman_filter.py  test_model.py  test_simulation.py
test/: CMakeLists.txt  biggles_birth_move.cpp  biggles_capability_recorder.cpp  biggles_clutter.cpp  biggles_core.cpp  biggles_cross_over_move.cpp  biggles_death_move.cpp  biggles_engine.cpp  biggles_extend_move.cpp  biggles_fun.cpp  biggles_indexed_partition.cpp  biggles_io.cpp  biggles_just_sample.cpp  biggles_kalman_filter.cpp  biggles_likelihood.cpp  biggles_link_probabilities.cpp  biggles_max_creation.cpp  biggles_merge_move.cpp  biggles_moves.cpp  biggles_observation_collection.cpp  biggles_observation_rate.cpp  biggles_partition_ged.cpp  biggles_partition_sampler.cpp  biggles_priors.cpp  biggles_proposal.cpp  biggles_reduce_move.cpp  biggles_samplers.cpp  biggles_simple_samplers.cpp  biggles_simulate.cpp  biggles_split_move.cpp  biggles_tracker.cpp  biggles_transfer_move.cpp  biggles_update_move.cpp  gibbs.cpp  metropolis_hastings.cpp  sim-config.ini  simple-ground-truth.json  simple-input.json
test-data/: CMakeLists.txt  constrained.ini  crowded.ini  simple.ini
test/tracking/: simple-input.tracked.cp4l.19Sep06.0828.json
utility/: CMakeLists.txt  jansson_wrapper.cpp  jansson_wrapper.hpp
